# Hackathon

./: .gitignore  README.md  pyproject.toml
Garmin/: Garmin_info.py
Garmin/Garmin_data/data_creation/: display_data.py  display_data_function.py  generate_data.py
Garmin/front_end_data_display/: garmin_data_api.json  nice_front_end_of_data.py
