[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["keshan <keshansharp123@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pandas = "^2.2.3"
tabulate = "^0.9.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
